fastapi-server-log.txt
Script started on 2025-10-18 01:32:27-07:00 [COMMAND="echo 'change directory to fast api server' && cd /home/kyle/Deployments/mvp-llm-python-sever && echo 'pull latest change from git repo' &&   eval "$(ssh-agent -s)" && ssh-add /home/kyle/.ssh/github-key && git fetch && git pull &&   echo 'start fastapi server...' &&   . ./venv/bin/activate && uvicorn main:app --host 0.0.0.0 --port 8000 --workers 4    " TERM="xterm-256color" TTY="/dev/pts/1" COLUMNS="127" LINES="54"]
change directory to fast api server
pull latest change from git repo
Agent pid 225948
Identity added: /home/kyle/.ssh/github-key (knguyen1193@outlook.com)
Already up to date.
start fastapi server...
[32mINFO[0m:     Uvicorn running on [1mhttp://0.0.0.0:8000[0m (Press CTRL+C to quit)
[32mINFO[0m:     Started parent process [[36m[1m225946[0m]
[32mINFO[0m:     Started server process [[36m226068[0m]
[32mINFO[0m:     Waiting for application startup.
[32mINFO[0m:     Started server process [[36m226066[0m]
[32mINFO[0m:     Application startup complete.
[32mINFO[0m:     Waiting for application startup.
[32mINFO[0m:     Application startup complete.
[32mINFO[0m:     Started server process [[36m226069[0m]
[32mINFO[0m:     Waiting for application startup.
[32mINFO[0m:     Started server process [[36m226067[0m]
[32mINFO[0m:     Waiting for application startup.
[32mINFO[0m:     Application startup complete.
[32mINFO[0m:     Application startup complete.
classify_intent_service reached
MODEL_PATH:  /home/kyle/.models/bartowski/Llama-3.2-3B-Instruct-GGUF/Llama-3.2-3B-Instruct-Q5_K_M.gguf
Attempting GPU LLM with n_gpu_layers = -1
llama_context: n_ctx_per_seq (1024) < n_ctx_train (131072) -- the full capacity of the model will not be utilized
GPU LLM loaded Successfully
Response from LLM : content='other' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--b6cc7d47-3d56-481f-82c2-f2349764a9f6-0'
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /classify-intent HTTP/1.1[0m" [32m200 OK[0m
generate_natural_response_service reached1️⃣
[LOG] Condition 'other' met
[DEBUG] Server reach sub_classify_other_intent
[DEBUG] Reponse from LLM :  content='Response: chit-chat' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--541e6ba6-e9ec-4586-846d-d58817fd3b1a-0'
[DEBUG] logic reach in isinstance condition
[DEBUG] category: chit-chat
[DEBUG] category: chit-chat
Sub type:  chit-chat
generate_natural_response_service service concluded and natural_response is : Hi there! I'm doing great, thanks. It's always nice to chat with someone new and catch up on how things are going.

What about you? What brings a smile to your face today?

(By the way, what can I help schedule for this day?)
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /generate-natural-response HTTP/1.1[0m" [32m200 OK[0m
classify_intent_service reached
Response from LLM : content='other' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--f2606cf6-5fb4-4ea3-bcbe-cdb5b5883bae-0'
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /classify-intent HTTP/1.1[0m" [32m200 OK[0m
generate_natural_response_service reached1️⃣
[LOG] Condition 'other' met
[DEBUG] Server reach sub_classify_other_intent
[DEBUG] Reponse from LLM :  content='Response: computational-math' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--abc3c62b-b216-47ec-b3e5-ac9bc113a44a-0'
[DEBUG] logic reach in isinstance condition
[DEBUG] category: computational-math
[DEBUG] category: computational-math
Sub type:  computational-math
[DEBUG] cleaned expression: t
[DEBUG] result: t
Math result : t
generate_natural_response_service service concluded and natural_response is : The result is t. If this calculation relates to scheduling, I can help you calculate the duration of an event or suggest optimal times for activities based on your input and desired outcome
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /generate-natural-response HTTP/1.1[0m" [32m200 OK[0m
classify_intent_service reached
Response from LLM : content='other' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--eadd36e3-0525-447e-91b9-3bcc3c38c85a-0'
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /classify-intent HTTP/1.1[0m" [32m200 OK[0m
generate_natural_response_service reached1️⃣
[LOG] Condition 'other' met
[DEBUG] Server reach sub_classify_other_intent
[DEBUG] Reponse from LLM :  content='Response: general-knowledge' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--4815b7b5-0543-486e-9121-d22e750f6fd5-0'
[DEBUG] logic reach in isinstance condition
[DEBUG] category: general-knowledge
[DEBUG] category: general-knowledge
Sub type:  general-knowledge
generate_natural_response_service service concluded and natural_response is : I'm optimized for English, but I can handle basic Vietnamese queries related to scheduling. Bạn cần giúp gì về lịch trình hôm nay?
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /generate-natural-response HTTP/1.1[0m" [32m200 OK[0m
classify_intent_service reached
Response from LLM : content='other' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--0e84aafa-be06-4f85-b25a-9f2d17af0c9d-0'
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /classify-intent HTTP/1.1[0m" [32m200 OK[0m
generate_natural_response_service reached1️⃣
[LOG] Condition 'other' met
[DEBUG] Server reach sub_classify_other_intent
[DEBUG] Reponse from LLM :  content='Response: computational-math' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--8e7477e1-a884-4c86-84fe-41f8163a931d-0'
[DEBUG] logic reach in isinstance condition
[DEBUG] category: computational-math
[DEBUG] category: computational-math
Sub type:  computational-math
[DEBUG] cleaned expression: t q
[DEBUG] error in safe_eval_math: Sympify of expression 'could not parse 't q'' failed, because of exception being raised:
SyntaxError: invalid syntax (<string>, line 1)
Math result : Invalid math expression: Sympify of expression 'could not parse 't q'' failed, because of exception being raised:
SyntaxError: invalid syntax (<string>, line 1). Please try a scheduling-related query.
generate_natural_response_service service concluded and natural_response is : Sub-type: computational-math
Query: kết quả tính toán 12 - 5 là gì ?
Computed math result (invalid due to syntax error): Invalid

Response:
Xin lỗi, tôi không thể thực hiện phép tính này do có vấn đề về cấu trúc dữ liệu. Bạn cần giúp đỡ với việc sắp xếp lịch trình hay thông tin khác liên quan đến calendar?
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /generate-natural-response HTTP/1.1[0m" [32m200 OK[0m
classify_intent_service reached
Response from LLM : content='other' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--9465f670-6f96-4568-a2fe-e3cbebb5563f-0'
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /classify-intent HTTP/1.1[0m" [32m200 OK[0m
generate_natural_response_service reached1️⃣
[LOG] Condition 'other' met
[DEBUG] Server reach sub_classify_other_intent
[DEBUG] Reponse from LLM :  content='Response: chit-chat' additional_kwargs={} response_metadata={'finish_reason': 'stop'} id='run--8cf48768-5497-42c9-9634-4157e1e33ef3-0'
[DEBUG] logic reach in isinstance condition
[DEBUG] category: chit-chat
[DEBUG] category: chit-chat
Sub type:  chit-chat
generate_natural_response_service service concluded and natural_response is : Xin chào! Tôi đang hoạt động tốt, cảm ơn bạn đã hỏi. Bạn cần giúp gì về lịch trình hôm nay không?
[32mINFO[0m:     127.0.0.1:38280 - "[1mPOST /generate-natural-response HTTP/1.1[0m" [32m200 OK[0m
^^C  ^C[32mINFO[0m:     Received SIGINT, exiting.
[32mINFO[0m:     Terminated child process [226066]
[32mINFO[0m:     Terminated child process [226067]
[32mINFO[0m:     Terminated child process [226068]
[32mINFO[0m:     Terminated child process [226069]
[32mINFO[0m:     Waiting for child process [226066]
[32mINFO[0m:     Shutting down
[32mINFO[0m:     Shutting down
[32mINFO[0m:     Shutting down
[32mINFO[0m:     Shutting down
[32mINFO[0m:     Waiting for application shutdown.
[32mINFO[0m:     Waiting for application shutdown.
[32mINFO[0m:     Waiting for application shutdown.
[32mINFO[0m:     Application shutdown complete.
[32mINFO[0m:     Application shutdown complete.
[32mINFO[0m:     Application shutdown complete.
[32mINFO[0m:     Finished server process [[36m226067[0m]
[32mINFO[0m:     Finished server process [[36m226069[0m]
[32mINFO[0m:     Finished server process [[36m226068[0m]
[32mINFO[0m:     Waiting for application shutdown.
[32mINFO[0m:     Application shutdown complete.
[32mINFO[0m:     Finished server process [[36m226066[0m]
[32mINFO[0m:     Waiting for child process [226067]
[32mINFO[0m:     Waiting for child process [226068]
[32mINFO[0m:     Waiting for child process [226069]
[32mINFO[0m:     Stopping parent process [[36m[1m225946[0m]

Script done on 2025-10-18 01:34:17-07:00 [COMMAND_EXIT_CODE="0"]
